--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 layout: home
 title: Home
 ---
+
+  <link rel="icon" href="https://github.com/dnnguyen99/dnnguyen99.github.io/blob/gh-pages/icon.jpg">
